--- a/main.html
+++ b/main.html
@@ -7,16 +7,17 @@
 </head>
 
 <body>
+	<form method="post">
 	<h1>Feedback Form</h1>
 	<label for="name">Name</label>
-		<input type="text" id="name" minlength="3"  maxlength="50" required><br>
+	<input type="text" id="name" minlength="3"  maxlength="50" required><br>
 	<label for="portfolio">Portfolio</label>
-		<input type="url" id="portfolio" required>
-		<br>
+	<input type="url" id="portfolio" required><br>
 	<label for="favColor">Favorite Color</label>
 	<input type="color" required><br>
 	<label for="likeness">Likeness</label>
 	<input type="range" min="1" max="100" required>
+	</form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
