--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<label for="portfolio">Portfolio</label>
 	<input type="url" id="portfolio" required><br>
 	<label for="favColor">Favorite Color</label>
-	<input type="color" required><br>
+	<input type="color"><br>
 	<label for="likeness">Likeness</label>
 	<input type="range" min="1" max="100" required>
 	</form>
