--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -8,20 +7,24 @@
 
 <body>
 	<form method="post">
-	<h1>Feedback Form</h1>
-	<label for="name">Name</label>
-	<input type="text" id="name" minlength="3"  maxlength="50" required><br>
-	<label for="portfolio">Portfolio</label>
-	<input type="url" id="portfolio" required><br>
-	<label for="favColor">Favorite Color</label>
-	<input type="color"><br>
-	<label for="likeness">Likeness</label>
-	<input type="range" min="1" max="100" required>
+		<h1>Feedback Form</h1>
+		
+		<label for="name">Name</label>
+		<input type="text" id="name" name="name" minlength="3" maxlength="50" required><br>
+		
+		<label for="portfolio">Portfolio</label>
+		<input type="url" id="portfolio" name="portfolio" required><br>
+		
+		<label for="favColor">Favorite Color</label>
+		<input type="color" id="favColor" name="favColor"><br>
+		
+		<label for="likeness">Likeness</label>
+		<input type="range" id="likeness" name="likeness" min="1" max="100" required><br>
+		
+		<button type="submit">Submit</button>
 	</form>
 	
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
